Fix the last touch point in Mus

Currently GestureRecognizerImplMus recceives the last touch point
location through ui::EventObserver (which is supplied through
ObserveEventTypes() mojo call). However, during window move, this
can be late since the OnObservedInputEvent will be called after
processing other event handlings in the window server.

As is written in the bug, if the client observes through
OnBoundsChanged(), this bounds change happens in the client before
OnObservedInputEvent. This results with GetLastTouchPointForTarget
returning 1-frame older location. This isn't quite observable
on normal user operation but has significant differences on test
scenario.

Instead of observing the input, it can simply remember the offset
of the touch location when the window move starts.

BUG=901540
TEST=see the filter update

Change-Id: I84bf19d9b705ec582b5359383a914b19c506adf9
Reviewed-on: https://chromium-review.googlesource.com/c/1321257
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Jun Mukai <mukai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605921}
Former-commit-id: bfc78a0a51d3bb81ca3b5464899c14c8be38e5e1